fixed user not logged in profile glitch

--- a/src/Project/Navigation/index.css
+++ b/src/Project/Navigation/index.css
@@ -8,3 +8,17 @@
 .font-custom {
     font-family: 'Fjalla One', sans-serif;
 }
+  
+  .nav-link {
+    display: flex;
+    align-items: center;
+  }
+  
+  .nav-link span {
+    margin-right: 10px; 
+  }
+
+  .navbar-brand {
+    padding-left: 20px; 
+    margin-right: 20px; 
+  }
