--- a/src/Project/Search/index.css
+++ b/src/Project/Search/index.css
@@ -10,20 +10,94 @@
     padding-bottom: 1em;
     color: black;
   }
-/* 
-  .green-card-one {
-    background-color: rgb(34, 139, 34);
-    border-width: 5px;
-    border-color: rgb(34, 139, 34);
-    color: white;
-    padding: 2em;
-    width: 60%;
-    clip-path: polygon(0% 7%, 100% 7%, 100% 80%, 75% 80%, 75% 100%, 50% 80%, 0% 80%);
-    
-    /* clip-path: polygon(95% 0, 100% 50%, 95% 100%, 0% 100%, 2% 49%, 0% 0%); */
- 
 
   .green-link {
     color: green;
   }
+
+  .search-results-table {
+    background-color: green;
+    padding-left: 20px;
+    padding-bottom: 10px;
+    margin: 0px 0;
+    width: 95% !important; /* Adjust the width as needed  clip-path: polygon(0 0, 100% 0, 100% 80%, 75% 80%, 75% 100%, 50% 80%, 0% 80%); */
+    clip-path: polygon(0% 7%, 100% 7%, 100% 80%, 75% 80%, 75% 100%, 50% 80%, 0% 80%);
+    font-size: min(max(1.5vw, 16px), 4vw);
+  }
+
+  .search-results-table th {
+    /* Your styles for table header cells */
+    background-color: green;
+    color: white;
+  }
+  
+  .search-results-table td {
+    /* Your styles for table body cells */
+    background-color: rgb(112, 228, 112);
+    color: green;
+  }
+
+.links {
+  color: white;
+}
+
+.table a {
+  color: white;
+}
+
+.table th {
+  background-color: green; /* Green background */
+  color: white; /* White text color */
+  padding: 10px;
+  text-align: left;
+  
+}
+
+/* Style for table body cells */
+.table td {
+  background-color: green; /* Green background */
+  color: white; /* White text color */
+  /* border: 1px solid #ddd; */
+  padding: 10px;
+  border-width: 5px;
+  border-color: lightgreen;
+}
+
+/* Add alternating background color to table rows */
+.table tbody tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+/* Additional style for small screen table */
+.small-screen-table th,
+.small-screen-table td {
+  background-color: green; /* Green background */
+  color: white; /* White text color */
+  padding: 10px;
+  border-width: 5px;
+  border-color: lightgreen;
+}
+
+/* Add alternating background color to small screen table rows */
+.small-screen-table tbody tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+ /* Style for text inside green card one */
+ .green-card-one div {
+  white-space: nowrap; /* Prevent text from wrapping */
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
+.background-color-card {
+  background-color: rgb(46, 186, 46);
+  color: white;
+  clip-path: polygon(0% 7%, 100% 7%, 100% 80%, 50% 80%, 25% 100%, 25% 80%, 0% 80%);
+  width: 60%;
+  padding: 2em;
+  padding-bottom: 4em;
+  font-size: min(max(2vw, 16px), 4vw);
+}
 
