station details styling completed

--- a/src/Project/StationDetails/index.css
+++ b/src/Project/StationDetails/index.css
@@ -77,4 +77,10 @@
     text-overflow: ellipsis;
   }
 
+  .white-text-button {
+    color: white;
+    text-decoration: none; /* Removes underline */
+    font-weight: bold; 
+    /* font-family: 'Monaco', monospace; */
+  }
  
