--- a/src/Project/Search/index.css
+++ b/src/Project/Search/index.css
@@ -99,5 +99,7 @@
   padding: 2em;
   padding-bottom: 4em;
   font-size: min(max(2vw, 16px), 4vw);
+  font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif
+
 }
 
