--- a/src/Project/index.css
+++ b/src/Project/index.css
@@ -4,3 +4,9 @@
     
   }
 
+  body {
+    overflow: hidden; /* Hide scrollbars */
+    overflow-x: auto; /* Allow horizontal scrolling if needed */
+    overflow-y: auto; /* Allow vertical scrolling if needed */
+  }
+
